Adds responsiveness to animations trigger script & removes button-triggered same animations

--- a/configura.html
+++ b/configura.html
@@ -75,7 +75,7 @@
     </div>
   </header>
 
-  <section class="container">
+  <section id="first-container" class="container">
       <section id="cotas" class="row-wrapper">
         <div class="col-12 col-xl-9 m-auto">
             <div class="row">
@@ -97,8 +97,6 @@
                   </div>
                 </div>
 			</div>
-
-			<button onclick="animar()">Animar</button>
 			
 			<div id="cotas-details" class="col-12 col-xl-9 m-auto">
 				<div class="row">
@@ -2539,8 +2537,6 @@
 				</div>
 			</div>
 
-			<!-- <button type="button" class="btn btn-lg btn-danger" data-toggle="popover" title="Popover title" data-content="And here's some amazing content. It's very engaging. Right?">Click to toggle popover</button> -->
-
         </div>
 	  </section>
 
@@ -2561,7 +2557,6 @@
 						  </div>
 					  </div>
 				  </div>
-				  <button class="d-none d-sm-block" onclick="animar2()">Animar</button>
               </div>
           </div>
       </section>
@@ -2829,7 +2824,7 @@
 
     <!-- End Section carousel -->
 
-    <section class="container">
+    <section id="second-container" class="container">
       <section id="customize" class="row-wrapper">
         <div class="row">
             <div class="col-sm-10 col-xl-9 m-auto">
