--- a/configura.html
+++ b/configura.html
@@ -101,23 +101,6 @@
 			<div id="cotas-details" class="col-12 col-xl-9 m-auto">
 				<div class="row">
 					<div class="col-12 col-sm-9 m-auto">
-
-						<!-- Cota modals -->
-						<div class="modal fade" id="cotaModal" tabindex="-1" role="dialog" aria-labelledby="swatchModalLabel" aria-hidden="true">
-							<div class="modal-dialog" role="document">
-							<div class="modal-content">
-								<div class="modal-header">
-									<img class="close-modal" src="assets/img/vec/boton_menos_popup.svg" data-dismiss="modal" alt="cerrar">
-									<h5 class="modal-title" id="swatchModalLabel">Interruptor táctil</h5>
-								</div>
-								<div class="modal-body">
-									<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit .</p>
-								</div>
-							</div>
-							</div>
-						</div>
-						<!-- / Cota modals -->
-
 						<div class="img-wrapper text-center position-relative">
 							<svg version="1.1" id="cotas-indicadores" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 					viewBox="0 0 524 568.2" style="enable-background:new 0 0 524 568.2;" xml:space="preserve">
@@ -2507,28 +2490,46 @@
 									c-2.3,0-4.1,1.9-4.1,4.1s1.9,4.1,4.1,4.1s4.1-1.9,4.1-4.1S373.6,71.4,371.3,71.4z M371.3,79.5c-2.2,0-4-1.8-4-4c0-2.2,1.8-4,4-4
 									c2.2,0,4,1.8,4,4C375.4,77.7,373.6,79.5,371.3,79.5z M371.3,71.7c-2.1,0-3.8,1.7-3.8,3.8s1.7,3.8,3.8,3.8s3.8-1.7,3.8-3.8
 									S373.4,71.7,371.3,71.7z"/>
-								<path class="plus-icon" data-toggle="modal" data-target="#cotaModal" data-backdrop="false" d="M152.9,76v-0.6H57.8V121h-29v0.6h29v45.5h95.1v-0.6H58.3v-44.9h94.5V121H58.3V76H152.9z M20.4,108H6
-									c-3.3,0-6,2.7-6,6v14.5c0,3.3,2.7,6,6,6h14.5c3.3,0,6-2.7,6-6V114C26.4,110.7,23.7,108,20.4,108z M17.4,122.4h-3.1v3.1h-2.2v-3.1H9
-									v-2.2h3.1v-3.1h2.2v3.1h3.1L17.4,122.4L17.4,122.4z"/>
-								<path class="plus-icon" d="M28.8,196.2v0.6h123.8v11.6h0.6v-11.6h25.3v11.6h0.6v-12.2H28.8z M20.4,183.3H6c-3.3,0-6,2.7-6,6v14.5
-									c0,3.3,2.7,6,6,6h14.5c3.3,0,6-2.7,6-6v-14.5C26.4,186,23.7,183.3,20.4,183.3z M17.4,197.6h-3.1v3.1h-2.2v-3.1H9v-2.2h3.1v-3.1h2.2
-									v3.1h3.1L17.4,197.6L17.4,197.6z"/>
-								<path class="plus-icon" d="M204.3,218.9v11.6H28.8v0.6h176.1v-12.2H204.3z M20.4,217.6H6c-3.3,0-6,2.7-6,6V238c0,3.3,2.7,6,6,6h14.5
-									c3.3,0,6-2.7,6-6v-14.5C26.4,220.3,23.7,217.6,20.4,217.6z M17.4,231.9h-3.1v3.1h-2.2v-3.1H9v-2.2h3.1v-3.1h2.2v3.1h3.1L17.4,231.9
-									L17.4,231.9z"/>
-								<path class="plus-icon" d="M28.8,475.9h40.1v0.6H28.8V475.9z M20.4,462.9H6c-3.3,0-6,2.7-6,6v14.5c0,3.3,2.7,6,6,6h14.5c3.3,0,6-2.7,6-6
-									v-14.5C26.4,465.5,23.7,462.9,20.4,462.9z M17.4,477.2h-3.1v3.1h-2.2v-3.1H9V475h3.1V472h2.2v3.1h3.1V477.2z"/>
-								<path class="plus-icon" d="M455.3,475.9h39.9v0.6h-39.9V475.9z M518,463h-14.5c-3.3,0-6,2.7-6,6v14.5c0,3.3,2.7,6,6,6H518c3.3,0,6-2.7,6-6
-									V469C524,465.7,521.3,463,518,463z M515,477.4h-3.1v3.1h-2.2v-3.1h-3.1v-2.2h3.1v-3.1h2.2v3.1h3.1V477.4z"/>
-								<path class="plus-icon" d="M262.4,236.6h-0.6V247h233.4v-0.6H262.4V236.6z M518,233.5h-14.5c-3.3,0-6,2.7-6,6v14.5c0,3.3,2.7,6,6,6H518
-									c3.3,0,6-2.7,6-6v-14.5C524,236.2,521.3,233.5,518,233.5z M515,247.8h-3.1v3.1h-2.2v-3.1h-3.1v-2.2h3.1v-3.1h2.2v3.1h3.1V247.8z"/>
-								<path class="plus-icon" d="M371.3,212h123.9v0.6H371.3V212z M518,199h-14.5c-3.3,0-6,2.7-6,6v14.5c0,3.3,2.7,6,6,6H518c3.3,0,6-2.7,6-6
-									V205C524,201.7,521.3,199,518,199z M515,213.4h-3.1v3.1h-2.2v-3.1h-3.1v-2.2h3.1v-3.1h2.2v3.1h3.1V213.4z"/>
+								<a tabindex="0" class="left-popover" data-toggle="popover" data-trigger="focus" title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio.">
+									<path class="plus-icon" d="M152.9,76v-0.6H57.8V121h-29v0.6h29v45.5h95.1v-0.6H58.3v-44.9h94.5V121H58.3V76H152.9z M20.4,108H6
+										c-3.3,0-6,2.7-6,6v14.5c0,3.3,2.7,6,6,6h14.5c3.3,0,6-2.7,6-6V114C26.4,110.7,23.7,108,20.4,108z M17.4,122.4h-3.1v3.1h-2.2v-3.1H9
+										v-2.2h3.1v-3.1h2.2v3.1h3.1L17.4,122.4L17.4,122.4z"/>
+								</a>
+								<a tabindex="0" class="left-popover" data-toggle="popover" data-trigger="focus" title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio.">
+									<path class="plus-icon" d="M28.8,196.2v0.6h123.8v11.6h0.6v-11.6h25.3v11.6h0.6v-12.2H28.8z M20.4,183.3H6c-3.3,0-6,2.7-6,6v14.5
+										c0,3.3,2.7,6,6,6h14.5c3.3,0,6-2.7,6-6v-14.5C26.4,186,23.7,183.3,20.4,183.3z M17.4,197.6h-3.1v3.1h-2.2v-3.1H9v-2.2h3.1v-3.1h2.2
+										v3.1h3.1L17.4,197.6L17.4,197.6z"/>
+								</a>
+								<a tabindex="0" class="left-popover" data-toggle="popover" data-trigger="focus" title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio.">
+									<path class="plus-icon" d="M204.3,218.9v11.6H28.8v0.6h176.1v-12.2H204.3z M20.4,217.6H6c-3.3,0-6,2.7-6,6V238c0,3.3,2.7,6,6,6h14.5
+										c3.3,0,6-2.7,6-6v-14.5C26.4,220.3,23.7,217.6,20.4,217.6z M17.4,231.9h-3.1v3.1h-2.2v-3.1H9v-2.2h3.1v-3.1h2.2v3.1h3.1L17.4,231.9
+										L17.4,231.9z"/>
+								</a>
+								<a tabindex="0" class="left-popover" data-toggle="popover" data-trigger="focus" title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio.">
+									<path class="plus-icon" d="M28.8,475.9h40.1v0.6H28.8V475.9z M20.4,462.9H6c-3.3,0-6,2.7-6,6v14.5c0,3.3,2.7,6,6,6h14.5c3.3,0,6-2.7,6-6
+										v-14.5C26.4,465.5,23.7,462.9,20.4,462.9z M17.4,477.2h-3.1v3.1h-2.2v-3.1H9V475h3.1V472h2.2v3.1h3.1V477.2z"/>
+								</a>
+								<a tabindex="0" class="right-popover" data-toggle="popover" data-trigger="focus" title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio.">
+									<path class="plus-icon" d="M455.3,475.9h39.9v0.6h-39.9V475.9z M518,463h-14.5c-3.3,0-6,2.7-6,6v14.5c0,3.3,2.7,6,6,6H518c3.3,0,6-2.7,6-6
+										V469C524,465.7,521.3,463,518,463z M515,477.4h-3.1v3.1h-2.2v-3.1h-3.1v-2.2h3.1v-3.1h2.2v3.1h3.1V477.4z"/>
+								</a>
+								<a tabindex="0" class="right-popover" data-toggle="popover" data-trigger="focus" title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio.">
+									<path class="plus-icon" d="M262.4,236.6h-0.6V247h233.4v-0.6H262.4V236.6z M518,233.5h-14.5c-3.3,0-6,2.7-6,6v14.5c0,3.3,2.7,6,6,6H518
+										c3.3,0,6-2.7,6-6v-14.5C524,236.2,521.3,233.5,518,233.5z M515,247.8h-3.1v3.1h-2.2v-3.1h-3.1v-2.2h3.1v-3.1h2.2v3.1h3.1V247.8z"/>
+								</a>
+								<a tabindex="0" class="right-popover" data-toggle="popover" data-trigger="focus" title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio.">
+									<path class="plus-icon" d="M371.3,212h123.9v0.6H371.3V212z M518,199h-14.5c-3.3,0-6,2.7-6,6v14.5c0,3.3,2.7,6,6,6H518c3.3,0,6-2.7,6-6
+										V205C524,201.7,521.3,199,518,199z M515,213.4h-3.1v3.1h-2.2v-3.1h-3.1v-2.2h3.1v-3.1h2.2v3.1h3.1V213.4z"/>
+								</a>
+								<a tabindex="0" class="right-popover" data-toggle="popover" data-trigger="focus" title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio.">
 								<path class="plus-icon" d="M466.4,75.5h-95.1V76h94.5V121h-94.5v0.6h94.5v45h-94.5v0.6h95.1v-45.5h28.8V121h-28.8V75.5z M518,108.1h-14.5
 									c-3.3,0-6,2.7-6,6v14.5c0,3.3,2.7,6,6,6H518c3.3,0,6-2.7,6-6V114C524,110.7,521.3,108.1,518,108.1z M515,122.4h-3.1v3.1h-2.2v-3.1
 									h-3.1v-2.2h3.1v-3.1h2.2v3.1h3.1V122.4z"/>
-								<path class="plus-icon" d="M262.4,28.8h-0.6v10.4h233.4v-0.6H262.4V28.8z M518,25.7h-14.5c-3.3,0-6,2.7-6,6v14.5c0,3.3,2.7,6,6,6H518
-									c3.3,0,6-2.7,6-6V31.7C524,28.4,521.3,25.7,518,25.7z M515,40h-3.1v3.1h-2.2V40h-3.1v-2.2h3.1v-3.1h2.2v3.1h3.1V40z"/>
+								</a>
+								<a tabindex="0" class="right-popover" data-toggle="popover" data-trigger="focus" data-placement="right" title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio.">
+									<path class="plus-icon" d="M262.4,28.8h-0.6v10.4h233.4v-0.6H262.4V28.8z M518,25.7h-14.5c-3.3,0-6,2.7-6,6v14.5c0,3.3,2.7,6,6,6H518
+										c3.3,0,6-2.7,6-6V31.7C524,28.4,521.3,25.7,518,25.7z M515,40h-3.1v3.1h-2.2V40h-3.1v-2.2h3.1v-3.1h2.2v3.1h3.1V40z"/>
+								</a>
 								<rect x="-4.4" y="-20.5" class="st0" width="27.4" height="11.2"/>
 								<rect x="40.6" y="-20.5" class="plus-icon" width="27.4" height="11.2"/>
 							</svg>
@@ -2638,37 +2639,17 @@
                     <div class="col-12 col-sm-6 conference-col">
                         <span class="d-block d-md-none row-name colores">Colores disponibles</span>
                         <div class="row position-relative">
-
-							<!-- Swatch modals -->
-							<div class="modal fade" id="swatchModal" tabindex="-1" role="dialog" aria-labelledby="swatchModalLabel" aria-hidden="true">
-								<div class="modal-dialog" role="document">
-								<div class="modal-content">
-									<div class="modal-header">
-										<img src="assets/img/vec/boton_menos_popup.svg" data-dismiss="modal" alt="cerrar">
-										<h5 class="modal-title" id="swatchModalLabel">Moon Grey</h5>
-									</div>
-									<div class="modal-body">
-										<p>Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. </p>
-										<p>Recomendado para favorecer el equilibrio.</p>
-									</div>
-								</div>
-								</div>
-							</div>
-							<!-- / Swatch modals -->
-
-                            <div class="swatch color-swatch blue" data-toggle="modal" data-target="#swatchModal" data-backdrop="false"></div>
-                            <div class="swatch color-swatch pink" data-toggle="modal" data-target="#swatchModal" data-backdrop="false"></div>
-                            <div class="swatch color-swatch green" data-toggle="modal" data-target="#swatchModal" data-backdrop="false"></div>
-                            <div class="swatch color-swatch grey" data-toggle="modal" data-target="#swatchModal" data-backdrop="false"></div>
+							<a tabindex="0" class="swatch color-swatch blue right-popover" data-toggle="popover" data-trigger="focus"  title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio."></a>
+                            <a tabindex="0" class="swatch color-swatch pink right-popover" data-toggle="popover" data-trigger="focus"  title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio."></a>
+                            <a tabindex="0" class="swatch color-swatch green right-popover" data-toggle="popover" data-trigger="focus"  title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio."></a>
+                            <a tabindex="0" class="swatch color-swatch grey right-popover" data-toggle="popover" data-trigger="focus"  title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio."></a>
                         </div>
                     </div>
                     <div class="col-12 col-sm-6 work-col">
                         <span class="d-block d-md-none row-name colores">Colores disponibles</span>
                         <div class="row">
-							<div class="swatch color-swatch blue" data-toggle="modal" data-target="#swatchModal" data-backdrop="false"></div>
-							<!-- Popover test -->
-                            <a tabindex="0" class="swatch color-swatch grey" data-toggle="popover" data-trigger="focus"  title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio."></a>
-							<!-- End Popover test -->
+							<a tabindex="0" class="swatch color-swatch blue right-popover" data-toggle="popover" data-trigger="focus"  title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio."></a>
+                            <a tabindex="0" class="swatch color-swatch grey right-popover" data-toggle="popover" data-trigger="focus"  title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio."></a>
 						</div>
                     </div>
                 </div>
@@ -2685,25 +2666,25 @@
                     <div class="col-12 col-sm-6 conference-col">
                         <span class="d-block d-md-none row-name materiales">Materiales</span>
                         <div class="row">
-                            <div class="swatch mat-swatch" data-toggle="modal" data-target="#swatchModal" data-backdrop="false">
-                                <img src="assets/img/muestra_madera.png" alt="muestra-madera">
-                            </div>
-                            <div class="swatch mat-swatch" data-toggle="modal" data-target="#swatchModal" data-backdrop="false">
-                              <img src="assets/img/muestra_forbo.png" alt="muestra-forbo">
-                            </div>
-                            <div class="swatch mat-swatch green" data-toggle="modal" data-target="#swatchModal" data-backdrop="false"></div>
+							<a tabindex="0" class="swatch mat-swatch right-popover" data-toggle="popover" data-trigger="focus"  title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio.">
+								<img src="assets/img/muestra_madera.png" alt="muestra-madera">
+							</a>
+							<a tabindex="0" class="swatch mat-swatch right-popover" data-toggle="popover" data-trigger="focus"  title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio.">
+							  <img src="assets/img/muestra_forbo.png" alt="muestra-forbo">
+							</a>
+							<a tabindex="0" class="swatch mat-swatch green right-popover" data-toggle="popover" data-trigger="focus"  title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio."></a>
                         </div>
                     </div>
                     <div class="col-12 col-sm-6 work-col">
                         <span class="d-block d-md-none row-name materiales">Materiales</span>
                         <div class="row">
-                            <div class="swatch mat-swatch" data-toggle="modal" data-target="#swatchModal" data-backdrop="false">
+							<a tabindex="0" class="swatch mat-swatch right-popover" data-toggle="popover" data-trigger="focus"  title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio.">
                                 <img src="assets/img/muestra_madera.png" alt="muestra-madera">
-                            </div>
-                            <div class="swatch mat-swatch" data-toggle="modal" data-target="#swatchModal" data-backdrop="false">
-                              <img src="assets/img/muestra_forbo.png" alt="muestra-forbo">
-                            </div>
-                            <div class="swatch mat-swatch grey" data-toggle="modal" data-target="#swatchModal" data-backdrop="false"></div>
+							</a>
+                            <a tabindex="0" class="swatch mat-swatch right-popover" data-toggle="popover" data-trigger="focus"  title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio.">
+								<img src="assets/img/muestra_forbo.png" alt="muestra-forbo">
+							</a>
+							<a tabindex="0" class="swatch mat-swatch grey right-popover" data-toggle="popover" data-trigger="focus"  title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio."></a>
                         </div>
                     </div>
                 </div>
