Fixes grid issue

--- a/configura.html
+++ b/configura.html
@@ -2810,16 +2810,20 @@
         <div class="row">
             <div class="col-sm-10 col-xl-9 m-auto">
                 <div class="row w-100">
-                    <div class="col-md-6 customize-text">
+                    <div class="col-md-7 customize-text">
                         <h3 class="section-title">Personalizalo a tu gusto acorde a tus necesidades</h3>
-                        <p>El panel de herramientas de BEAKTOR es totalmente adaptable. Incorpora diferentes accesorios que encajan en la superficie multiperforada y que están diseñados para servir de soporte a pantallas, móviles, tabletas, documentos y otros elementos ligeros de escritorio.</p>
-                        <p>El panel de herramientas de BEAKTOR es totalmente adaptable. Incorpora diferentes accesorios que encajan en la superficie multiperforada y que están diseñados para servir de soporte a pantallas, móviles, tabletas, documentos y otros elementos ligeros de escritorio.</p>
-                    </div>
+					</div>
+				</div>
+				<div class="row w-100">
+					<div class="col-md-6">
+						<p>El panel de herramientas de BEAKTOR es totalmente adaptable. Incorpora diferentes accesorios que encajan en la superficie multiperforada y que están diseñados para servir de soporte a pantallas, móviles, tabletas, documentos y otros elementos ligeros de escritorio.</p>
+						<p>El panel de herramientas de BEAKTOR es totalmente adaptable. Incorpora diferentes accesorios que encajan en la superficie multiperforada y que están diseñados para servir de soporte a pantallas, móviles, tabletas, documentos y otros elementos ligeros de escritorio.</p>
+					</div>
                     <div class="col-md-6 text-center text-sm-right customize-img">
                         <img src="assets/img/beaktor_accesorios.png" alt="beaktor-accesorios">
-                    </div>
-                </div>
-            </div>
+					</div>
+				</div>
+			</div>
         </div>
       </section>
 
