--- a/contacto.html
+++ b/contacto.html
@@ -22,7 +22,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container p-0">
-      <div class="row w-100 m-0">
+      <div class="row justify-content-between w-100 m-0 position-relative">
         <div class="col-10 col-lg-4 d-flex justify-content-between">
           <a class="navbar-brand" href="index.html">
             <img src="assets/img/vec/beaktor_logo_blanco.svg" alt="logo-Beaktor">
@@ -31,23 +31,22 @@
             <span class="navbar-toggler-icon"></span>
           </button>
         </div>
-        <div class="collapse navbar-collapse col-5 p-3 p-lg-0 ml-auto" id="navbarNavAltMarkup">
-          <div class="navbar-nav w-100 d-flex justify-content-between align-items-end nav-center">
+        <div class="col-7 p-3 p-lg-0 ml-auto collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav w-100 d-flex justify-content-end align-items-end nav-center">
             <a class="nav-item nav-link active" href="configura.html">CONFIGURA <span class="sr-only">(current)</span></a>
             <a class="nav-item nav-link" href="#">COMPRAR</a>
             <a class="nav-item nav-link" href="#">CUSTOM</a>
             <a class="nav-item nav-link" href="#">SALA DE PRENSA</a>
           </div>
         </div>
-        <div class="col-1 d-none d-lg-block"></div>
-        <div class="col-2 nav-left">
+        <div class="col-1 nav-left">
           <div class="navbar-nav row justify-content-end">
             <a href="#" class="nav-item cart d-none">
               <img src="assets/img/cart.png" alt="carrito">
             </a>
             <a class="nav-item nav-link active d-none" href="#">LOG IN</a>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle text-right" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 ES
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
