Extends table rows border-bottom to horizontal scrolled space @ mobile size

--- a/configura.html
+++ b/configura.html
@@ -2562,27 +2562,27 @@
       </section>
 
       <section id="models-table" class="row-wrapper">
-          <div id="table-header" class="row table-row border-bottom">
-              <div class="col-2 d-none d-md-block"></div>
+          <div id="table-header" class="row table-row">
+              <div class="col-2 d-none d-md-block border-bottom"></div>
               <div class="col-md-9 d-flex">
                   <div class="row w-100">
-                    <div class="col-12 col-sm-6 conference-col">
+                    <div class="col-12 col-sm-6 border-bottom conference-col">
                         <h3 class="model-name">BEAKTOR Conference</h3>
                     </div>
-                    <div class="col-12 col-sm-6 work-col">
+                    <div class="col-12 col-sm-6 border-bottom work-col">
                         <h3 class="model-name">BEAKTOR Work</h3>
                     </div>
                   </div>
               </div>
               <div class="col-1"></div>
           </div>
-          <div id="table-iluminacion" class="row table-row border-bottom">
-            <div class="col-2 d-none d-md-block">
+          <div id="table-iluminacion" class="row table-row">
+            <div class="col-2 d-none d-md-block border-bottom">
               <span class="row-name iluminacion">Iluminación</span>
             </div>
             <div class="col-md-9 d-flex">
                 <div class="row w-100">
-                    <div class="col-12 col-sm-6 conference-col">
+                    <div class="col-12 col-sm-6 border-bottom conference-col">
                         <span class="d-block d-md-none row-name iluminacion">Iluminación</span>
                         <p>2 iluminaciones con panel táctil</p>
                         <ul class="feat-list">
@@ -2591,7 +2591,7 @@
                             <li>Lámpara LED de ambiente</li>
                         </ul>
                     </div>
-                    <div class="col-12 col-sm-6 work-col">
+                    <div class="col-12 col-sm-6 border-bottom work-col">
                         <span class="d-block d-md-none row-name iluminacion">Iluminación</span>
                         <p>2 iluminaciones con panel táctil</p>
                         <ul class="feat-list">
@@ -2604,13 +2604,13 @@
             <div class="col-1"></div>
           </div>
 
-          <div id="table-conexiones" class="row table-row border-bottom">
-            <div class="col-2 d-none d-md-block">
+          <div id="table-conexiones" class="row table-row">
+            <div class="col-2 d-none d-md-block border-bottom">
               <span class="row-name conexiones">Conexiones</span>
             </div>
             <div class="col-md-9 d-flex">
                 <div class="row w-100">
-                    <div class="col-12 col-sm-6 conference-col">
+                    <div class="col-12 col-sm-6 border-bottom conference-col">
                         <span class="d-block d-md-none row-name conexiones">Conexiones</span>
                         <ul class="feat-list">
                             <li>2 Tomas de corriente tipo-E</li>
@@ -2618,7 +2618,7 @@
                             <li>1 Puerto USB-C</li>
                         </ul>
                     </div>
-                    <div class="col-12 col-sm-6 work-col">
+                    <div class="col-12 col-sm-6 border-bottom work-col">
                         <span class="d-block d-md-none row-name conexiones">Conexiones</span>
                         <ul class="feat-list">
                             <li>2 Tomas de corriente tipo-E</li>
@@ -2629,13 +2629,13 @@
             <div class="col-1"></div>
 		  </div>
 
-          <div id="table-colores" class="row table-row border-bottom">
-            <div class="col-2 d-none d-md-block">
+          <div id="table-colores" class="row table-row">
+            <div class="col-2 d-none d-md-block border-bottom">
               <span class="row-name colores">Colores disponibles</span>
             </div>
             <div class="col-md-9 d-flex">
                 <div class="row w-100">
-                    <div class="col-12 col-sm-6 conference-col">
+                    <div class="col-12 col-sm-6 border-bottom conference-col">
                         <span class="d-block d-md-none row-name colores">Colores disponibles</span>
                         <div class="row position-relative">
 							<a tabindex="0" class="swatch color-swatch blue right-popover" data-toggle="popover" data-trigger="focus"  title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio."></a>
@@ -2644,7 +2644,7 @@
                             <a tabindex="0" class="swatch color-swatch grey right-popover" data-toggle="popover" data-trigger="focus"  title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio."></a>
                         </div>
                     </div>
-                    <div class="col-12 col-sm-6 work-col">
+                    <div class="col-12 col-sm-6 border-bottom work-col">
                         <span class="d-block d-md-none row-name colores">Colores disponibles</span>
                         <div class="row">
 							<a tabindex="0" class="swatch color-swatch blue right-popover" data-toggle="popover" data-trigger="focus"  title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio."></a>
@@ -2656,13 +2656,13 @@
             <div class="col-1"></div>
           </div>
 
-          <div id="table-materiales" class="row table-row border-bottom">
-            <div class="col-2 d-none d-md-block">
+          <div id="table-materiales" class="row table-row">
+            <div class="col-2 d-none d-md-block border-bottom">
               <span class="row-name materiales">Materiales</span>
             </div>
             <div class="col-md-9 d-flex">
                 <div class="row w-100">
-                    <div class="col-12 col-sm-6 conference-col">
+                    <div class="col-12 col-sm-6 border-bottom conference-col">
                         <span class="d-block d-md-none row-name materiales">Materiales</span>
                         <div class="row">
 							<a tabindex="0" class="swatch mat-swatch right-popover" data-toggle="popover" data-trigger="focus"  title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio.">
@@ -2674,7 +2674,7 @@
 							<a tabindex="0" class="swatch mat-swatch green right-popover" data-toggle="popover" data-trigger="focus"  title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio."></a>
                         </div>
                     </div>
-                    <div class="col-12 col-sm-6 work-col">
+                    <div class="col-12 col-sm-6 border-bottom work-col">
                         <span class="d-block d-md-none row-name materiales">Materiales</span>
                         <div class="row">
 							<a tabindex="0" class="swatch mat-swatch right-popover" data-toggle="popover" data-trigger="focus"  title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio.">
