Various client fixes (center color tooltips, revert models animation, etc.)

--- a/configura.html
+++ b/configura.html
@@ -2525,7 +2525,7 @@
 									c-3.3,0-6,2.7-6,6v14.5c0,3.3,2.7,6,6,6H518c3.3,0,6-2.7,6-6V114C524,110.7,521.3,108.1,518,108.1z M515,122.4h-3.1v3.1h-2.2v-3.1
 									h-3.1v-2.2h3.1v-3.1h2.2v3.1h3.1V122.4z"/>
 								</a>
-								<a tabindex="0" class="right-popover" data-toggle="popover" data-trigger="focus" data-placement="right" title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio.">
+								<a tabindex="0" class="right-popover" data-toggle="popover" data-placement="right" title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio.">
 									<path class="plus-icon" d="M262.4,28.8h-0.6v10.4h233.4v-0.6H262.4V28.8z M518,25.7h-14.5c-3.3,0-6,2.7-6,6v14.5c0,3.3,2.7,6,6,6H518
 										c3.3,0,6-2.7,6-6V31.7C524,28.4,521.3,25.7,518,25.7z M515,40h-3.1v3.1h-2.2V40h-3.1v-2.2h3.1v-3.1h2.2v3.1h3.1V40z"/>
 								</a>
@@ -2638,17 +2638,17 @@
                     <div class="col-12 col-sm-6 border-bottom conference-col">
                         <span class="d-block d-md-none row-name colores">Colores disponibles</span>
                         <div class="row position-relative">
-							<a tabindex="0" class="swatch color-swatch blue right-popover" data-toggle="popover" data-trigger="focus"  title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio."></a>
-                            <a tabindex="0" class="swatch color-swatch pink right-popover" data-toggle="popover" data-trigger="focus"  title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio."></a>
-                            <a tabindex="0" class="swatch color-swatch green right-popover" data-toggle="popover" data-trigger="focus"  title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio."></a>
-                            <a tabindex="0" class="swatch color-swatch grey right-popover" data-toggle="popover" data-trigger="focus"  title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio."></a>
+							<a tabindex="0" class="swatch color-swatch blue color-popover" data-toggle="popover" data-trigger="focus" title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio."></a>
+                            <a tabindex="0" class="swatch color-swatch pink color-popover" data-toggle="popover" data-trigger="focus" title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio."></a>
+                            <a tabindex="0" class="swatch color-swatch green color-popover" data-toggle="popover" data-trigger="focus" title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio."></a>
+                            <a tabindex="0" class="swatch color-swatch grey color-popover" data-toggle="popover" data-trigger="focus" title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio."></a>
                         </div>
                     </div>
                     <div class="col-12 col-sm-6 border-bottom work-col">
                         <span class="d-block d-md-none row-name colores">Colores disponibles</span>
                         <div class="row">
-							<a tabindex="0" class="swatch color-swatch blue right-popover" data-toggle="popover" data-trigger="focus"  title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio."></a>
-                            <a tabindex="0" class="swatch color-swatch grey right-popover" data-toggle="popover" data-trigger="focus"  title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio."></a>
+							<a tabindex="0" class="swatch color-swatch blue color-popover" data-toggle="popover" data-trigger="focus" title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio."></a>
+                            <a tabindex="0" class="swatch color-swatch grey color-popover" data-toggle="popover" data-trigger="focus" title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio."></a>
 						</div>
                     </div>
                 </div>
@@ -2665,25 +2665,25 @@
                     <div class="col-12 col-sm-6 border-bottom conference-col">
                         <span class="d-block d-md-none row-name materiales">Materiales</span>
                         <div class="row">
-							<a tabindex="0" class="swatch mat-swatch right-popover" data-toggle="popover" data-trigger="focus"  title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio.">
+							<a tabindex="0" class="swatch mat-swatch color-popover" data-toggle="popover" data-trigger="focus"  title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio.">
 								<img src="assets/img/muestra_madera.png" alt="muestra-madera">
 							</a>
-							<a tabindex="0" class="swatch mat-swatch right-popover" data-toggle="popover" data-trigger="focus"  title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio.">
+							<a tabindex="0" class="swatch mat-swatch color-popover" data-toggle="popover" data-trigger="focus"  title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio.">
 							  <img src="assets/img/muestra_forbo.png" alt="muestra-forbo">
 							</a>
-							<a tabindex="0" class="swatch mat-swatch green right-popover" data-toggle="popover" data-trigger="focus"  title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio."></a>
+							<a tabindex="0" class="swatch mat-swatch green color-popover" data-toggle="popover" data-trigger="focus"  title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio."></a>
                         </div>
                     </div>
                     <div class="col-12 col-sm-6 border-bottom work-col">
                         <span class="d-block d-md-none row-name materiales">Materiales</span>
                         <div class="row">
-							<a tabindex="0" class="swatch mat-swatch right-popover" data-toggle="popover" data-trigger="focus"  title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio.">
+							<a tabindex="0" class="swatch mat-swatch color-popover" data-toggle="popover" data-trigger="focus"  title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio.">
                                 <img src="assets/img/muestra_madera.png" alt="muestra-madera">
 							</a>
-                            <a tabindex="0" class="swatch mat-swatch right-popover" data-toggle="popover" data-trigger="focus"  title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio.">
+                            <a tabindex="0" class="swatch mat-swatch color-popover" data-toggle="popover" data-trigger="focus"  title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio.">
 								<img src="assets/img/muestra_forbo.png" alt="muestra-forbo">
 							</a>
-							<a tabindex="0" class="swatch mat-swatch grey right-popover" data-toggle="popover" data-trigger="focus"  title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio."></a>
+							<a tabindex="0" class="swatch mat-swatch grey color-popover" data-toggle="popover" data-trigger="focus"  title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio."></a>
                         </div>
                     </div>
                 </div>
