Applies 2 requested fixes (see issue 38) & other ltl fixes

--- a/configura.html
+++ b/configura.html
@@ -26,40 +26,40 @@
 
 	<nav class="navbar navbar-expand-lg navbar-dark">
 		<div class="container p-0">
-		  <div class="row justify-content-between w-100 m-0 position-relative">
+			<div class="row justify-content-between w-100 m-0 position-relative">
 			<div class="col-10 col-lg-4 d-flex justify-content-between">
-			  <a class="navbar-brand" href="index.html">
+				<a class="navbar-brand" href="index.html">
 				<img src="assets/img/vec/beaktor_logo_blanco.svg" alt="logo-Beaktor">
-			  </a>
-			  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+				</a>
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
-			  </button>
+				</button>
 			</div>
 			<div class="col-7 p-3 p-lg-0 ml-auto collapse navbar-collapse" id="navbarNavAltMarkup">
-			  <div class="navbar-nav w-100 d-flex justify-content-end align-items-end nav-center">
+				<div class="navbar-nav w-100 d-flex justify-content-end align-items-end nav-center">
 				<a class="nav-item nav-link active" href="configura.html">CONFIGURA <span class="sr-only">(current)</span></a>
 				<a class="nav-item nav-link" href="#">COMPRAR</a>
 				<a class="nav-item nav-link" href="#">CUSTOM</a>
 				<a class="nav-item nav-link" href="#">SALA DE PRENSA</a>
-			  </div>
+				</div>
 			</div>
 			<div class="col-1 nav-left">
-			  <div class="navbar-nav row justify-content-end">
+				<div class="navbar-nav row justify-content-end">
 				<a href="#" class="nav-item cart d-none">
-				  <img src="assets/img/cart.png" alt="carrito">
+					<img src="assets/img/cart.png" alt="carrito">
 				</a>
 				<a class="nav-item nav-link active d-none" href="#">LOG IN</a>
 				<li class="nav-item dropdown">
-				  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 					ES
-				  </a>
-				  <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+					</a>
+					<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
 					<a class="dropdown-item" href="#">EN</a>
-				  </div>
+					</div>
 				</li>
-			  </div>
+				</div>
 			</div>
-		  </div>
+			</div>
 		</div>
 	</nav>
 
@@ -2489,43 +2489,43 @@
 									c-2.3,0-4.1,1.9-4.1,4.1s1.9,4.1,4.1,4.1s4.1-1.9,4.1-4.1S373.6,71.4,371.3,71.4z M371.3,79.5c-2.2,0-4-1.8-4-4c0-2.2,1.8-4,4-4
 									c2.2,0,4,1.8,4,4C375.4,77.7,373.6,79.5,371.3,79.5z M371.3,71.7c-2.1,0-3.8,1.7-3.8,3.8s1.7,3.8,3.8,3.8s3.8-1.7,3.8-3.8
 									S373.4,71.7,371.3,71.7z"/>
-								<a tabindex="0" class="left-popover" data-toggle="popover" data-trigger="focus" title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio.">
+								<a tabindex="0" class="left-popover" data-toggle="popover" data-trigger="focus" title="Interruptor táctil" data-content="Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit">
 									<path class="plus-icon" d="M152.9,76v-0.6H57.8V121h-29v0.6h29v45.5h95.1v-0.6H58.3v-44.9h94.5V121H58.3V76H152.9z M20.4,108H6
 										c-3.3,0-6,2.7-6,6v14.5c0,3.3,2.7,6,6,6h14.5c3.3,0,6-2.7,6-6V114C26.4,110.7,23.7,108,20.4,108z M17.4,122.4h-3.1v3.1h-2.2v-3.1H9
 										v-2.2h3.1v-3.1h2.2v3.1h3.1L17.4,122.4L17.4,122.4z"/>
 								</a>
-								<a tabindex="0" class="left-popover" data-toggle="popover" data-trigger="focus" title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio.">
+								<a tabindex="0" class="left-popover" data-toggle="popover" data-trigger="focus" title="Interruptor táctil" data-content="Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit">
 									<path class="plus-icon" d="M28.8,196.2v0.6h123.8v11.6h0.6v-11.6h25.3v11.6h0.6v-12.2H28.8z M20.4,183.3H6c-3.3,0-6,2.7-6,6v14.5
 										c0,3.3,2.7,6,6,6h14.5c3.3,0,6-2.7,6-6v-14.5C26.4,186,23.7,183.3,20.4,183.3z M17.4,197.6h-3.1v3.1h-2.2v-3.1H9v-2.2h3.1v-3.1h2.2
 										v3.1h3.1L17.4,197.6L17.4,197.6z"/>
 								</a>
-								<a tabindex="0" class="left-popover" data-toggle="popover" data-trigger="focus" title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio.">
+								<a tabindex="0" class="left-popover" data-toggle="popover" data-trigger="focus" title="Interruptor táctil" data-content="Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit">
 									<path class="plus-icon" d="M204.3,218.9v11.6H28.8v0.6h176.1v-12.2H204.3z M20.4,217.6H6c-3.3,0-6,2.7-6,6V238c0,3.3,2.7,6,6,6h14.5
 										c3.3,0,6-2.7,6-6v-14.5C26.4,220.3,23.7,217.6,20.4,217.6z M17.4,231.9h-3.1v3.1h-2.2v-3.1H9v-2.2h3.1v-3.1h2.2v3.1h3.1L17.4,231.9
 										L17.4,231.9z"/>
 								</a>
-								<a tabindex="0" class="left-popover" data-toggle="popover" data-trigger="focus" title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio.">
+								<a tabindex="0" class="left-popover" data-toggle="popover" data-trigger="focus" title="Interruptor táctil" data-content="Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit">
 									<path class="plus-icon" d="M28.8,475.9h40.1v0.6H28.8V475.9z M20.4,462.9H6c-3.3,0-6,2.7-6,6v14.5c0,3.3,2.7,6,6,6h14.5c3.3,0,6-2.7,6-6
 										v-14.5C26.4,465.5,23.7,462.9,20.4,462.9z M17.4,477.2h-3.1v3.1h-2.2v-3.1H9V475h3.1V472h2.2v3.1h3.1V477.2z"/>
 								</a>
-								<a tabindex="0" class="right-popover" data-toggle="popover" data-trigger="focus" title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio.">
+								<a tabindex="0" class="right-popover" data-toggle="popover" data-trigger="focus" title="Interruptor táctil" data-content="Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit">
 									<path class="plus-icon" d="M455.3,475.9h39.9v0.6h-39.9V475.9z M518,463h-14.5c-3.3,0-6,2.7-6,6v14.5c0,3.3,2.7,6,6,6H518c3.3,0,6-2.7,6-6
 										V469C524,465.7,521.3,463,518,463z M515,477.4h-3.1v3.1h-2.2v-3.1h-3.1v-2.2h3.1v-3.1h2.2v3.1h3.1V477.4z"/>
 								</a>
-								<a tabindex="0" class="right-popover" data-toggle="popover" data-trigger="focus" title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio.">
+								<a tabindex="0" class="right-popover" data-toggle="popover" data-trigger="focus" title="Interruptor táctil" data-content="Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit">
 									<path class="plus-icon" d="M262.4,236.6h-0.6V247h233.4v-0.6H262.4V236.6z M518,233.5h-14.5c-3.3,0-6,2.7-6,6v14.5c0,3.3,2.7,6,6,6H518
 										c3.3,0,6-2.7,6-6v-14.5C524,236.2,521.3,233.5,518,233.5z M515,247.8h-3.1v3.1h-2.2v-3.1h-3.1v-2.2h3.1v-3.1h2.2v3.1h3.1V247.8z"/>
 								</a>
-								<a tabindex="0" class="right-popover" data-toggle="popover" data-trigger="focus" title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio.">
+								<a tabindex="0" class="right-popover" data-toggle="popover" data-trigger="focus" title="Interruptor táctil" data-content="Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit">
 									<path class="plus-icon" d="M371.3,212h123.9v0.6H371.3V212z M518,199h-14.5c-3.3,0-6,2.7-6,6v14.5c0,3.3,2.7,6,6,6H518c3.3,0,6-2.7,6-6
 										V205C524,201.7,521.3,199,518,199z M515,213.4h-3.1v3.1h-2.2v-3.1h-3.1v-2.2h3.1v-3.1h2.2v3.1h3.1V213.4z"/>
 								</a>
-								<a tabindex="0" class="right-popover" data-toggle="popover" data-trigger="focus" title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio.">
+								<a tabindex="0" class="right-popover" data-toggle="popover" data-trigger="focus" title="Interruptor táctil" data-content="Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit">
 								<path class="plus-icon" d="M466.4,75.5h-95.1V76h94.5V121h-94.5v0.6h94.5v45h-94.5v0.6h95.1v-45.5h28.8V121h-28.8V75.5z M518,108.1h-14.5
 									c-3.3,0-6,2.7-6,6v14.5c0,3.3,2.7,6,6,6H518c3.3,0,6-2.7,6-6V114C524,110.7,521.3,108.1,518,108.1z M515,122.4h-3.1v3.1h-2.2v-3.1
 									h-3.1v-2.2h3.1v-3.1h2.2v3.1h3.1V122.4z"/>
 								</a>
-								<a tabindex="0" class="right-popover" data-toggle="popover" data-placement="right" title="Moon Grey" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio.">
+								<a tabindex="0" class="right-popover" data-toggle="popover" data-trigger="focus" title="Interruptor táctil" data-content="Una tonalidad práctica y atemporal, ideal para quienes desean mantener todo bajo control, sin sobresaltos, y buscan un ambiente ordenado y sofisticado. Recomendado para favorecer el equilibrio.">
 									<path class="plus-icon" d="M262.4,28.8h-0.6v10.4h233.4v-0.6H262.4V28.8z M518,25.7h-14.5c-3.3,0-6,2.7-6,6v14.5c0,3.3,2.7,6,6,6H518
 										c3.3,0,6-2.7,6-6V31.7C524,28.4,521.3,25.7,518,25.7z M515,40h-3.1v3.1h-2.2V40h-3.1v-2.2h3.1v-3.1h2.2v3.1h3.1V40z"/>
 								</a>
@@ -2549,8 +2549,8 @@
                     </div>
                   </div>
                   <div class="row">
-                      <div class="col-9 col-sm-6 m-auto d-flex">
-                          <div id="animate-container" class="img-wrapper">
+                      <div id="animate-container" class="col-9 col-sm-6 m-auto d-flex">
+                          <div class="img-wrapper">
 							  <img class="w-100 beaktor front" src="assets/img/beaktor_conference.png" alt="beaktor-conference">
 							  <img class="w-100 beaktor null" src="assets/img/beaktor_conference.png">
                               <img class="w-100 beaktor back" src="assets/img/beaktor_work.png" alt="beaktor-work">
@@ -2831,7 +2831,7 @@
               <div class="col">
                   <div class="row imgs-wrapper">
                       <div class="col-md-4 text-right">
-						  <img src="assets/img/beaktor_conference.png" alt="beaktor-custom-1">
+						  <img src="assets/img/beaktor_accesorios1.jpg" alt="beaktor-custom-1">
 						  <div class="row btn-wrapper">
 							  <div class="col text-center">
 								<a href="#"><button>Comprar</button></a>
@@ -2839,7 +2839,7 @@
 						  </div>
                       </div>
                       <div class="col-md-4 text-center">
-						<img src="assets/img/beaktor_conference.png" alt="beaktor-custom-1">
+						<img src="assets/img/beaktor_accesorios2.jpg" alt="beaktor-custom-1">
 						<div class="row btn-wrapper">
 							<div class="col text-center">
 							  <a href="#"><button>Comprar</button></a>
@@ -2847,7 +2847,7 @@
 						</div>
                     </div>
                     <div class="col-md-4 text-left">
-						<img src="assets/img/beaktor_conference.png" alt="beaktor-custom-1">
+						<img src="assets/img/beaktor_accesorios3.jpg" alt="beaktor-custom-1">
 						<div class="row btn-wrapper">
 							<div class="col text-center">
 							  <a href="#"><button>Comprar</button></a>
